[package]
name = "bovey-ledger"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
bzip2 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy-lru = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
mockall = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
proptest = { workspace = true }
prost = { workspace = true }
qualifier_attr = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
reed-solomon-erasure = { workspace = true, features = ["simd-accel"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
bovey-account-decoder = { workspace = true }
bovey-accounts-db = { workspace = true }
ocp-bpf-loader-program = { workspace = true }
bovey-cost-model = { workspace = true }
bovey-entry = { workspace = true }
bovey-feature-set = { workspace = true }
bovey-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
bovey-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
bovey-measure = { workspace = true }
bovey-metrics = { workspace = true }
bovey-perf = { workspace = true }
bovey-program-runtime = { workspace = true, features = ["metrics"] }
bovey-pubkey = { workspace = true }
bovey-rayon-threadlimit = { workspace = true }
bovey-runtime = { workspace = true }
bovey-runtime-transaction = { workspace = true }
bovey-sdk = { workspace = true }
ocp-stake-program = { workspace = true }
bovey-storage-bigtable = { workspace = true }
bovey-storage-proto = { workspace = true }
bovey-vm = { workspace = true }
bovey-vm-transaction = { workspace = true }
bovey-timings = { workspace = true }
bovey-transaction-status = { workspace = true }
bovey-vote = { workspace = true }
ocp-vote-program = { workspace = true }
ocp-token = { workspace = true, features = ["no-entrypoint"] }
ocp-token-2022 = { workspace = true, features = ["no-entrypoint"] }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
trees = { workspace = true }

[dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.23.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
bs58 = { workspace = true }
criterion = { workspace = true }
bovey-account-decoder = { workspace = true }
bovey-logger = { workspace = true }
bovey-runtime = { workspace = true, features = ["dev-context-only-utils"] }
ocp-pod = { workspace = true }
test-case = { workspace = true }

[features]
dev-context-only-utils = []
frozen-abi = [
    "dep:bovey-frozen-abi",
    "dep:bovey-frozen-abi-macro",
    "bovey-runtime/frozen-abi",
]

[lib]
crate-type = ["lib"]
name = "bovey_ledger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
