[package]
name = "bovey-merkle-tree"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
fast-math = { workspace = true }
bovey-hash = { workspace = true }
bovey-sha256-hasher = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lib]
crate-type = ["lib"]
name = "bovey_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
