[package]
name = "bovey-storage-bigtable"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
backoff = { workspace = true, features = ["tokio"] }
bincode = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
enum-iterator = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
goauth = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-proxy = { workspace = true }
log = { workspace = true }
# openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
# declare it here as well to activate the "vendored" feature that builds OpenSSL
openssl = { workspace = true, features = ["vendored"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
smpl_jwt = { workspace = true }
bovey-clock = { workspace = true }
bovey-message = { workspace = true }
bovey-metrics = { workspace = true }
bovey-pubkey = { workspace = true }
bovey-reserved-account-keys = { workspace = true }
bovey-serde = { workspace = true }
bovey-signature = { workspace = true }
bovey-storage-proto = { workspace = true }
bovey-time-utils = { workspace = true }
bovey-transaction = { workspace = true }
bovey-transaction-error = { workspace = true }
bovey-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls", "transport"] }
zstd = { workspace = true }

[dev-dependencies]
bovey-hash = { workspace = true }
bovey-keypair = { workspace = true }
bovey-pubkey = { workspace = true, features = ["rand"] }
bovey-system-transaction = { workspace = true }
bovey-transaction-context = { workspace = true }

[lib]
crate-type = ["lib"]
name = "bovey_storage_bigtable"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
