[package]
name = "bovey-transaction-status"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
bovey-account-decoder = { workspace = true }
bovey-clock = { workspace = true }
bovey-hash = { workspace = true }
bovey-instruction = { workspace = true }
bovey-loader-v2-interface = { workspace = true, features = ["bincode"] }
bovey-message = { workspace = true }
bovey-program = { workspace = true }
bovey-pubkey = { workspace = true }
bovey-reserved-account-keys = { workspace = true }
bovey-reward-info = { workspace = true }
bovey-sdk-ids = { workspace = true }
bovey-signature = { workspace = true }
bovey-system-interface = { workspace = true }
bovey-transaction = { workspace = true }
bovey-transaction-error = { workspace = true }
bovey-transaction-status-client-types = { workspace = true }
ocp-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
ocp-memo = { workspace = true, features = ["no-entrypoint"] }
ocp-token = { workspace = true, features = ["no-entrypoint"] }
ocp-token-2022 = { workspace = true, features = ["no-entrypoint"] }
ocp-token-group-interface = { workspace = true }
ocp-token-metadata-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true }
bovey-pubkey = { workspace = true, features = ["rand"] }
ocp-token-confidential-transfer-proof-extraction = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
