[package]
name = "bovey-bloom"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bv = { workspace = true, features = ["serde"] }
fnv = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
bovey-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
bovey-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
bovey-sanitize = { workspace = true }
bovey-time-utils = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
bovey-hash = { workspace = true }
bovey-sha256-hasher = { workspace = true }
bovey-signature = { workspace = true, features = ["std"] }

[lib]
crate-type = ["lib"]
name = "bovey_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = [
    "dep:bovey-frozen-abi",
    "dep:bovey-frozen-abi-macro",
    "bovey-hash/frozen-abi",
]

[lints]
workspace = true
