[package]
name = "bovey-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
bovey-account = { workspace = true }
bovey-client-traits = { workspace = true }
bovey-commitment-config = { workspace = true }
bovey-connection-cache = { workspace = true }
bovey-epoch-info = { workspace = true }
bovey-hash = { workspace = true }
bovey-instruction = { workspace = true }
bovey-keypair = { workspace = true }
bovey-measure = { workspace = true }
bovey-message = { workspace = true }
bovey-pubkey = { workspace = true }
bovey-pubsub-client = { workspace = true }
bovey-quic-client = { workspace = true }
bovey-quic-definitions = { workspace = true }
bovey-rpc-client = { workspace = true, features = ["default"] }
bovey-rpc-client-api = { workspace = true }
bovey-rpc-client-nonce-utils = { workspace = true }
bovey-signature = { workspace = true }
bovey-signer = { workspace = true }
bovey-streamer = { workspace = true }
bovey-thin-client = { workspace = true }
bovey-time-utils = { workspace = true }
bovey-tpu-client = { workspace = true, features = ["default"] }
bovey-transaction = { workspace = true }
bovey-transaction-error = { workspace = true }
bovey-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
bovey-net-utils = { workspace = true, features = ["dev-context-only-utils"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
