[package]
name = "bovey-connection-cache"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
bovey-keypair = { workspace = true }
bovey-measure = { workspace = true }
bovey-metrics = { workspace = true }
bovey-net-utils = { workspace = true }
bovey-time-utils = { workspace = true }
bovey-transaction-error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand_chacha = { workspace = true }
bovey-logger = { workspace = true }
bovey-net-utils = { workspace = true }
