[package]
name = "bovey-tls-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rustls = { workspace = true, features = ["ring"] }
bovey-keypair = { workspace = true }
bovey-pubkey = { workspace = true }
bovey-signer = { workspace = true }
x509-parser = { workspace = true }

[lints]
workspace = true
